Software in Azerbaijan updated(unfinished)

--- a/Data Science Projects/Income/Income ML.ipynb
+++ b/Data Science Projects/Income/Income ML.ipynb
@@ -636,7 +636,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`Capital gain` and `Capital loss` is Negative Skew"
+    "`Capital gain` and `Capital loss` is Left Skew"
    ]
   },
   {
